--- a/index.html
+++ b/index.html
@@ -981,17 +981,17 @@
                   </h3>
                   <ul class="follow-social-list">
                     <li class="follow-social-item">
-                      <a href="" class="follow-social-link">
+                      <a href="https://www.facebook.com/leeviethoo/" class="follow-social-link">
                         <i class='bx bxl-facebook'></i>
                       </a>
                     </li>
                     <li class="follow-social-item">
-                      <a href="" class="follow-social-link">
+                      <a href="https://twitter.com/andyviet11" class="follow-social-link">
                         <i class='bx bxl-twitter' ></i>
                       </a>
                     </li>
                     <li class="follow-social-item">
-                      <a href="" class="follow-social-link">
+                      <a href="https://www.instagram.com/alv.serotonin/" class="follow-social-link">
                         <i class='bx bxl-instagram' ></i>
                       </a>
                     </li>
